@@ -195,7 +195,23 @@ enable search
 enable automaterial
 
 # Other interface improvement tools
-enable dwarfmonitor mousequery automelt autotrade buildingplan resume trackstop zone stocks autochop stockpiles
+# enable dwarfmonitor mousequery automelt autotrade buildingplan resume trackstop zone stocks autochop stockpiles
+enable \
+ dwarfmonitor \
+ mousequery \
+ automelt \
+ autotrade \
+ buildingplan \
+ resume \
+ trackstop \
+ zone \
+ stocks \
+ autochop \
+ stockpiles
+#end a line with a backslash to make it continue to the next line. The \ is converted to a space for the final command.
+# Multiline commands are ONLY supported for scripts like dfhack.init. You cannot do multiline command manually on the DFHack console.
+# You cannot extend a commented line.
+# You can comment out the extension of a line.
 
 # allow the fortress bookkeeper to queue jobs through the manager
 stockflow enable
